[project]
name = "python-toukei-study"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "hisui-and-len", email = "amna.frais.o.07@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true
